# aera

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cg_cgame.cpp  cg_cgame.hpp  com.cpp  com_defs.hpp  com_print.hpp  font.cpp  font.hpp  fs.cpp  fs.glsl  fs.hpp  fs_files.cpp  fs_files.hpp  gfx.cpp  gfx.hpp  gfx_backend.cpp  gfx_backend.hpp  gfx_defs.hpp  gfx_uniform.hpp  input.cpp  input.hpp  main.cpp  sys.cpp  sys.hpp  text.fs.glsl  text.vs.glsl
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: bsp.fs.glsl  bsp.ps.glsl  bsp.ps.hlsl  bsp.vs.glsl  bsp.vs.hlsl  model.ps.glsl  model.ps.hlsl  model.vs.glsl  model.vs.hlsl  text.fs.glsl  text.ps.glsl  text.ps.hlsl  text.vs.glsl  text.vs.hlsl  vs.glsl
projects/xbox/aera.vs2003/: aera.vs2003.sln  aera.vs2003.vcproj
src/: cg_cgame.c  cg_cgame.cpp  cg_cgame.h  cg_cgame.hpp  cl.cpp  cl.hpp  cl_client.c  cl_client.cpp  cl_client.h  cl_client.hpp  cl_map.c  cl_map.cpp  cl_map.h  cmd_commands.c  cmd_commands.cpp  cmd_commands.h  cmd_commands.hpp  com.c  com.cpp  com_defs.h  com_defs.hpp  com_print.c  com_print.h  com_print.hpp  con_console.c  con_console.cpp  con_console.h  con_console.hpp  db_files.c  db_files.cpp  db_files.h  db_files.hpp  devcon.c  devcon.cpp  devcon.h  devcon.hpp  devgui.c  devgui.cpp  devgui.h  devgui.hpp  (+65 more)
src/acommon/: a_common.c  a_format.hpp  a_io.c  a_io.h  a_math.c  a_math.h  a_parse.hpp  a_string.c  a_string.h  a_type.c  a_type.h  acommon.h  z_mem.c  z_mem.h
toolchains/: xbox.cmake
toolchains/Platform/: Xbox-MSVC.cmake
